--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center done">버킷리스트1</div>
+        <div class="bucket img1 center">버킷리스트1</div>
         <div class="bucket img2 center">버킷리스트2</div>
         <div class="bucket img2 center">버킷리스트3</div>
         <div class="bucket img1 center">버킷리스트4</div>
